# rmw-rs

./: Cargo.toml  README.md
bindings/: Cargo.toml
bindings/src/: lib.rs
dash/: Cargo.toml
dash/src/: bindings.rs  lib.rs
rmw/: Cargo.toml
rmw/src/: client.rs  error.rs  lib.rs  ptr.rs  result.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/src/: lib.rs
