[package]
name = "rmw-dash"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "rmw_dash"
crate-type = ["cdylib"]

[dependencies]
rmw-sys = { path = "../sys" }

tracing = { workspace = true }
